@@ -123,6 +123,7 @@
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Location.cs" />
     <Compile Include="LocationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -130,15 +131,20 @@
       <DependentUpon>LocationForm.cs</DependentUpon>
     </Compile>
     <Compile Include="LocationInfo.cs" />
+    <Compile Include="LocationManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyComparer.cs" />
     <Compile Include="RemoveInvalidFeature.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="RemoveInvalidFeature.Designer.cs">
       <DependentUpon>RemoveInvalidFeature.cs</DependentUpon>
     </Compile>
+    <Compile Include="ScopeAbbrevConverter.cs" />
+    <Compile Include="SortableBindingList.cs" />
     <Compile Include="spver.cs" />
+    <Compile Include="TemplateInfo.cs" />
     <Compile Include="WaitCursor.cs" />
     <None Include="app.config" />
   </ItemGroup>
