@@ -1,0 +1,9 @@
+﻿
+namespace FeatureAdmin
+{
+    public class TemplateInfo
+    {
+        public string Name;
+        public string Title;
+    }
+}
